Limit InterProcessTimeTickConverter to platforms that require it

On most platforms the monotonic clock is system wide which means it is
consistent across processes making conversion unnecessary. In fact not
only it is unnecessary but harmfull because the
InterProcessTimeTickConverter (IPTTC) conversion [1] is an estimation
which introduces some error.

The patch limits the usage of IPTTC to platforms that require it which
is any Windows where we cannot use |QueryPerformanceCounter|.

After this change we will only collect UMA metrics[2] for IPTTC on
platforms where it is used.

[1] https://docs.google.com/document/d/1RcaOZ1G8ttAez9YuilvbDJCkCaYuLKqNkVpQvIBqsvM/edit
[2] Affects InterProcessTimeTicks.*

BUG=616574
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2090783002
Cr-Commit-Position: refs/heads/master@{#407270}

Former-commit-id: 4f3e28664ee4222ea54a442d996e40921a33b607